# my_text_editor

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
app/: main.py
app/frames/: editor.py  editor_tab.py  menu.py  menubar.py  path_tree.py  search_box.py  tree_menu.py
app/functions/: app_controller.py  file_controller.py
docs/: test.md
functions/: file_controller.py
